crates/widgets/src/snapshots/widgets__scene__tests__a_60_column_server_tab_keeps_the_album_details_at_the_right.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃    Miles Davis — Kind of Blue    1959 · 5 tracks · 45:44 ┃"
"┃    Miles Davis — Sketches of Spain       1 track · 45:44 ┃"
"┃                                                          ┃"
"┃                                                          ┃"
"┃                                                          ┃"
"┃                                                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
