crates/widgets/src/snapshots/widgets__scene__tests__a_queued_server_row_wears_its_queue_number.snap
---
source: crates/widgets/src/scene.rs
assertion_line: 671
expression: text
---
"┏ home · Albums: newest › Kind of Blue ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃    So What [q2]                                                              ┃"
"┃    Blue in Green [q1]                                                        ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
