crates/widgets/src/snapshots/widgets__scene__tests__a_server_tab_paints_its_path_and_its_albums.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃    Miles Davis — Kind of Blue                        1959 · 5 tracks · 45:44 ┃"
"┃    Miles Davis — Sketches of Spain                           1 track · 45:44 ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
