crates/widgets/src/snapshots/widgets__scene__tests__a_server_tab_paints_what_it_waits_for@empty.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ No albums                                                                    ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
