crates/widgets/src/snapshots/widgets__scene__tests__a_server_tab_paints_what_it_waits_for@loading.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest · loading albums… ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃    Miles Davis — Kind of Blue                        1959 · 5 tracks · 45:44 ┃"
"┃    Miles Davis — Sketches of Spain                           1 track · 45:44 ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
