crates/widgets/src/snapshots/widgets__scene__tests__a_server_view_says_what_its_filter_leaves_and_when_it_is_empty@filtered.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest · 1 / 2 · /kind ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃    Miles Davis — Kind of Blue                        1959 · 5 tracks · 45:44 ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
