crates/widgets/src/snapshots/widgets__scene__tests__a_server_view_says_what_its_filter_leaves_and_when_it_is_empty@no_playlists.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Playlists ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ No playlists on this server                                                  ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
