crates/widgets/src/snapshots/widgets__scene__tests__a_server_view_says_what_its_filter_leaves_and_when_it_is_empty@nothing_matches.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest · 0 / 2 · /kind ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃ Nothing matches                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
