crates/widgets/src/snapshots/widgets__scene__tests__an_open_album_follows_the_path_and_lists_its_tracks_like_local_rows.snap
---
source: crates/widgets/src/scene.rs
expression: text
---
"┏ home · Albums: newest › Kind of Blue ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃    So What                                                                   ┃"
"┃    Blue in Green                                                             ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
